# rustcost-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.MD  compose.yaml  rustcost-deployment.yaml
migrations/2025-09-22-151700_create_posts/: down.sql  up.sql
migrations/2025-10-02-144755_init_schema/: down.sql  up.sql
src/: config.rs  logging.rs  main.rs  routes.rs
src/api/: mod.rs
src/api/controller/: info_controller.rs  metrics_controller.rs  mod.rs  system_controller.rs
src/api/controller/info/: info_controller.rs  mod.rs
src/api/controller/metric/: metrics_controller.rs  mod.rs
src/api/dto/: info_dto.rs  metrics_dto.rs  mod.rs  system_dto.rs
src/api/routes/: info_routes.rs  metrics_routes.rs  mod.rs  system_routes.rs
src/api/util/: mod.rs  validation_ext.rs
src/core/: kube_client.rs  mod.rs
src/core/client/: k8s_client.rs  mod.rs
src/core/client/k8s/: client_k8s_container.rs  client_k8s_container_dto.rs  client_k8s_container_mapper.rs  client_k8s_deployment.rs  client_k8s_hpa.rs  client_k8s_limit_range.rs  client_k8s_namespace.rs  client_k8s_node.rs  client_k8s_node_dto.rs  client_k8s_node_mapper.rs  client_k8s_persistent_volume.rs  client_k8s_persistent_volume_claim.rs  client_k8s_pod.rs  client_k8s_pod_dto.rs  client_k8s_pod_mapper.rs  client_k8s_resource_quota.rs  container.rs  mod.rs  node.rs  node_dto.rs  pod.rs  pod_dto.rs  util.rs
src/core/persistence/: mod.rs  storage_path.rs
src/core/persistence/info/: mod.rs  path.rs
src/core/persistence/metrics/: metric_fs_adapter_base_trait.rs  mod.rs
src/domain/: mod.rs
src/domain/common/: mod.rs
src/domain/info/: mod.rs
src/domain/layer1/: mod.rs
src/domain/layer2/: mod.rs
src/domain/layer3/: mod.rs
src/domain/metric/: mod.rs
src/domain/metrics/: mod.rs
src/domain/models/: k8s.rs  metrics_dto.rs  mod.rs  node.rs  pod.rs
src/domain/settings/: mod.rs
src/domain/system/: mod.rs
src/handlers/nodes/: mod.rs  node_handler.rs
src/infra/: mod.rs
src/infra/db/: connection.rs  schema.rs
src/infra/repositories/: mod.rs  node_repository.rs  pod_repository.rs
src/libs/: constants.rs
src/scheduler/: mod.rs  schedule.rs
src/scheduler/tasks/: daily.rs  hour.rs  hourly.rs  minute.rs  minutely.rs  mod.rs
src/utils/: mod.rs
src/utils/schedulers/: mod.rs  node_scheduler.rs
(+379 files in other folders)
