[package]
name = "rustcost"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "tokio"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2"

uuid = { version = "1.17", features = ["fast-rng", "v4", "serde"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
anyhow = "1.0.100"

