[package]
name = "rustcost-core"
version = "1.0.0-dev.11"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "tokio"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15"
validator = { version = "0.20", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.15.1"
tokio = { version = "1.45", features = ["sync", "macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2"

uuid = { version = "1.17", features = ["fast-rng", "v4", "serde"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls-native-roots"] }
anyhow = "1.0.100"
tower-http = { version = "0.6.6", features = ["cors"] }
urlencoding = "2.1.3"

